# rename_by_csv

./: README.md  pyproject.toml
rename_by_csv/: main.py  parse_args.py
script/: build-version.py  build.cmd
